# KeSp_controller

./: Cargo.toml  README.md  default.json  flake.nix
.github/workflows/: release.yml
original-src/: flasher.rs  layout.rs  stats_analyzer.rs  ui_background.rs  ui_connection.rs  ui_helpers.rs  ui_mod.rs
original-src/serial/: native.rs
src/: advanced.rs  config.rs  connection.rs  context.rs  dispatch.rs  flasher.rs  key_selector.rs  keymap.rs  layout.rs  macros.rs  main.rs  models.rs  settings.rs  stats.rs  tools.rs
src/logic/: config_io.rs  flasher.rs  keycode.rs  layout.rs  mod.rs  parsers.rs
src/logic/serial/: native.rs
src/protocol/: binary.rs  flasher.rs  keycode.rs  layout_remap.rs  mod.rs
src/protocol/serial/: native.rs
ui/: globals.slint  main.slint  theme.slint
ui/components/: connection_bar.slint  dark_button.slint  dark_checkbox.slint  dark_combo_box.slint  dark_line_edit.slint  key_button.slint  key_selector.slint  keyboard_view.slint  status_bar.slint
ui/tabs/: tab_advanced.slint  tab_flasher.slint  tab_keymap.slint  tab_macros.slint  tab_settings.slint  tab_stats.slint  tab_tools.slint
