[package]
name = "KeSp_controller"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Cross-platform configurator for the KeSp split ergonomic keyboard"
repository = "https://github.com/mornepousse/KeSp_controller"

[dependencies]
slint = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
rfd = "0.15"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
